--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fahim Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">S M Fahim Hossen</span> World</h1>
+            <h3>World Class Web Developer and Programmer</h3>
+            <p>Well, I’m currently a student of CSE department, where I do all type of computer related thing. I want to
+                become a top class programmer.My ambition it. I want learn more and more about programmes. I want to
+                something big in future. Only Allah can help me to do that. I always pray that I can complete my target.
+            </p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/s-m-fahim-hossen-7208b6229/">HIRE
+                ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/jhankar.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
