--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             <h1>Welcome To</h1>
             <h1><span class="orange-color">S M Fahim Hossen</span> World</h1>
             <h3>World Class Web Developer and Programmer</h3>
-            <p>Well, I’m currently a student of CSE department, where I do all type of computer related thing. I want to
+            <p class="just">Well, I’m currently a student of CSE department, where I do all type of computer related
+                thing. I want to
                 become a top class programmer.My ambition it. I want learn more and more about programmes. I want to
                 something big in future. Only Allah can help me to do that. I always pray that I can complete my target.
             </p>
@@ -27,6 +28,19 @@
         </div>
         <div class="half-width">
             <img src="images/jhankar.png" alt="">
+        </div>
+    </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a Web Developer</h2>
+            <p class="just">I already learned the basic HTML and CSS. I can build any simple website. I can even teach
+                my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
         </div>
     </section>
 </body>
